--- a/k8s/otel-collector/deployment.yaml
+++ b/k8s/otel-collector/deployment.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     app: otel-collector
 spec:
-  replicas: 15
+  # replicas: 3
+  replicas: 20
   selector:
     matchLabels:
       app: otel-collector
